components/namespace-lister/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namespace-lister
  namespace: namespace-lister
  labels:
    apps: namespace-lister
  annotations:
    ignore-check.kube-linter.io/no-anti-affinity: "Using topologySpreadConstraints"
spec:
  selector:
    matchLabels:
      apps: namespace-lister
  replicas: 3
  template:
    metadata:
      labels:
        apps: namespace-lister
    spec:
      serviceAccountName: namespace-lister
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            apps: namespace-lister
      containers:
      - image: namespace-lister:foo
        name: namespace-lister
        args:
        - "-enable-tls=false"
        resources:
          limits:
            cpu: 1000m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - "ALL"
      terminationGracePeriodSeconds: 60
