components/namespace-lister/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: namespace-lister
  name: namespace-lister
  namespace: namespace-lister
spec:
  port:
    targetPort: 12000
  tls:
    termination: edge
  to:
    kind: Service
    name: namespace-lister
    weight: 100
  wildcardPolicy: None
